--- a/src/Components/Artists/Artists.module.css
+++ b/src/Components/Artists/Artists.module.css
@@ -1,22 +1,18 @@
 .container {
   padding-left: 60px;
-  padding-top: 60px;
+  margin-top: 100px;
 }
 .container h3 {
   color: #fff;
-  padding-top: 40px;
-  padding-left: 70px;
-  margin: 0;
   font-size: 20px;
   font-weight: 400;
+  padding-left: 70px;
 }
-.tracksWrapper {
-  padding-top: 30px;
-  padding-bottom: 30px;
+.artistCon {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 .exploreBtn {
   color: #fff;
@@ -46,28 +42,20 @@
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
 }
-@media (max-width: 1200px) {
-  .tracksWrapper {
+@media (max-width: 1380px) {
+  .artistCon {
     justify-content: center;
   }
-  .exploreBtn {
-    margin: 0 auto;
-    margin-bottom: 30px;
+}
+@media (max-width: 860px) {
+  .container h3 {
+    text-align: center;
     padding: 0;
-    width: 100%;
   }
 }
 @media (max-width: 576px) {
   .container {
-    padding: 0;
-    padding-top: 60px;
-  }
-  .container h3 {
-    padding: 0;
-    width: 100%;
-    text-align: center;
-  }
-  .exploreBtn {
-    margin-bottom: 90px;
+    padding-left: 0;
+    padding-bottom: 60px;
   }
 }
