--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -4,6 +4,7 @@
   left: 60px;
   width: calc(100vw - 60px);
   background-color: #111111;
+  z-index: 99;
 }
 .container div {
   display: flex;
@@ -38,4 +39,16 @@
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
+}
+@media (max-width: 576px) {
+  .container {
+    width: 100%;
+    left: 0;
+  }
+  .container h3 {
+    font-size: 20px;
+  }
+  .container img {
+    width: 150px;
+  }
 }
