--- a/src/Components/Tracks/TracksCard.module.css
+++ b/src/Components/Tracks/TracksCard.module.css
@@ -4,10 +4,13 @@
   justify-content: flex-start;
   width: 350px;
   background-color: #212529b2;
-  margin: 15px;
+  margin: 15px 15px 15px 0;
   border-radius: 8px;
   height: 75px;
   color: #fff;
+}
+.container img:first-child {
+  border-radius: 8px;
 }
 .container div {
   display: flex;
@@ -19,20 +22,19 @@
 h5 {
   margin: 0;
   margin-left: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 256px;
+  font-weight: 300;
 }
 .container h4 {
-  font-weight: 300;
   margin-top: 15px;
   margin-bottom: 10px;
 }
 .container h5 {
   font-size: 12px;
-  font-weight: 300;
   margin-bottom: 15px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 256px;
 }
 .container:hover {
   cursor: pointer;
@@ -65,5 +67,9 @@ h5 {
 @media (max-width: 992px) {
   .container {
     width: 80%;
+  }
+  .container h4,
+  h5 {
+    width: 196px;
   }
 }
