--- a/src/Components/Player/AudioPlayer.module.css
+++ b/src/Components/Player/AudioPlayer.module.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin-left: 100px;
 }
 
 .info img:first-child {
@@ -41,13 +42,16 @@
 .controls img:hover {
   cursor: pointer;
 }
+.progressBar {
+  margin-right: 100px;
+}
 .progressBar input[type="range"] {
   --range-progress: 0;
   -webkit-appearance: none;
   width: 100%;
   height: 3px;
   background: #2d2d2d;
-  /* accent-color: #fff !important; */
+  appearance: unset;
   border-radius: 2px;
   cursor: pointer;
   position: relative;
