Fixed missing data issues

--- a/src/Components/Player/AudioPlayer.module.css
+++ b/src/Components/Player/AudioPlayer.module.css
@@ -29,6 +29,9 @@
   margin: 0;
   width: 25px;
 }
+.info .heart:hover {
+  cursor: pointer;
+}
 .controls {
   display: flex;
   align-items: center;
